# xiaowei-device-sdk

./: LICENSE.txt  README.md
Device/: README.md
Device/CtrlModule/: Project.mk  build.sh  fast_build.sh  makefile.env  subdir.mk
Device/CtrlModule/include/: AudioApp.h  AudioFocus.h  CommonMgr.h  Media.h  OuterSkillMgr.h  Player.h  Playlist.h  txctypedef.h
Device/CtrlModule/xweicontrol/: TXCServices.cpp  TXCServices.hpp  ThirdLib.h  logger.cpp  logger.h  txctypedef.c
Device/CtrlModule/xweicontrol/App/: AppSkill.cpp  AppSkill.hpp  AppkitMsgBase.cpp  AppkitMsgBase.hpp  AppkitMsgbox.cpp  AppkitMsgbox.hpp  AsyncTask.h  AudioApp.cpp  AudioApp.hpp  AudioFocusManager.cpp  AudioFocusManager.hpp  AutoBuffer.cpp  AutoBuffer.hpp  CommonMgr.cpp  OuterSkillMgr.cpp  ResponseHolder.cpp  ResponseHolder.hpp  TXCAppManager.cpp  TXCAppManager.hpp  TXCLock.cpp  TXCLock.hpp  TXCMessageQueue.cpp  TXCMessageQueue.hpp  TXCMsgbox.cpp  TXCMsgbox.hpp  TXCSemaphore.cpp  TXCSemaphore.hpp  TXCSkillsDefineEx.h  Util.cpp  Util.hpp
Device/CtrlModule/xweicontrol/Media/: Media.cpp  Media.hpp  MediaFile.cpp  MediaFile.hpp  MediaMsgPrompt.cpp  MediaMsgPrompt.hpp  MediaMusic.cpp  MediaMusic.hpp  MediaTTS.cpp  MediaTTS.hpp  MediaText.cpp  MediaText.hpp  Medialist.cpp  Medialist.hpp  Player.cpp  Player.hpp  PlayerControl.cpp  PlayerControl.hpp  Playlist.cpp  Playlist.hpp
Device/Demo_Android/: build.gradle  build_jni.sh  settings.gradle
Device/Demo_Android/app/: build.gradle
Device/Demo_Android/app/src/main/: AndroidManifest.xml
Device/Demo_Android/app/src/main/assets/: bind_tips.pcm  hi.pcm  network_connected.pcm  network_disconnected.pcm  offline.pcm  online.pcm  please_speak.pcm
Device/Demo_Android/app/src/main/res/anim/: add_contact_scale_decrease.xml  add_contact_scale_enlarge.xml  anim_activity_exit.xml  anim_activity_finish_enter.xml  edit_contact_scale_decrease.xml  edit_contact_scale_enlarge.xml  rotate.xml  translate_down.xml  translate_up.xml
Device/Demo_Android/app/src/main/res/drawable/: bg_blue_camera_select_selector.xml  bg_card_selector.xml  bg_collection.xml  bg_radiu_rect_gray.xml  btn_alarm.xml  btn_big_blue_selector.xml  btn_blue_selector.xml  btn_close.xml  btn_front.xml  btn_like.xml  btn_like_active.xml  btn_lyric.xml  btn_lyric_active.xml  btn_next.xml  btn_pause.xml  btn_play.xml  btn_play_list.xml  btn_play_list_active.xml  btn_play_mode_order.xml  btn_play_mode_shuffle.xml  btn_play_mode_single.xml  (+17 more)
Device/Demo_Android/control/: build.gradle
Device/Demo_Android/control/jni/: Android.mk  Application.mk  CMakeLists.txt  OpusDecoder.cpp  OpusDecoder.h  PlayerCallback.cpp  PlayerCallback.h  ScopedJNIEnv.cpp  ScopedJNIEnv.h  Utils.cpp  Utils.h  XWeiApp_jni.cpp  XWeiCommon_jni.cpp  XWeiControl_jni.cpp  XWeiJNIDef.h  XWeiMedia_jni.cpp  XWeiOuterSkill_jni.cpp
Device/Demo_Android/control/src/main/: AndroidManifest.xml
Device/Demo_Android/gradle/wrapper/: gradle-wrapper.properties
Device/Demo_Android/wakeup/: build.gradle
Device/Demo_Android/wakeup/src/main/: AndroidManifest.xml
Device/Demo_Android/xiaoweiSDK/: CMakeLists.txt  build.gradle
Device/Demo_Android/xiaoweiSDK/jni/: Android.mk  Application.mk  Application_all.mk  BinderList.cpp  CMakeLists.txt  CommonDef.h  Device.cpp  FileTransfer.cpp  OTA.cpp  QCloudAudio.cpp  QQCall.cpp  Util.cpp  Util.h  WifiDecoder.cpp  XWSDK.cpp  base64.cpp  base64.h
Device/Demo_Android/xiaoweiSDK/src/main/: AndroidManifest.xml
Device/Demo_Linux/: AudioPlayer.cpp  AudioPlayer.h  AudioRecorder.cpp  AudioRecorder.h  CmdManager.cpp  CmdManager.h  Util.cpp  Util.h  XWeiAudioEngine.cpp  XWeiAudioEngine.h  XWeiDevice.cpp  XWeiDevice.h  XWeiPlayer.cpp  XWeiPlayer.h  XWeiTTSManager.cpp  XWeiTTSManager.h  main.cpp  makefile  run.sh
Device/Sample/BLE/: BLE.cpp  BLE.h
DeviceSDK/: README.md
DeviceSDK/interface/android/: TXCAVChat.h  TXCAudioPrivate.h
DeviceSDK/interface/linux/: TXCAudio.h  TXCAudioCommon.h  TXCAudioFileTransfer.h  TXCAudioMsg.h  TXCAudioRemind.h  TXCAudioResource.h  TXCAudioType.h  TXCAudioWordsList.h  TXCCMsg.h  TXCSkillsDefine.h  TXDeviceSDK.h  TXOTA.h  TXSDKCommonDef.h  TXVoiceLink.h
(+198 files in other folders)
